WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288215
AX: After dynamic page changes, WebKit can report the wrong AXEmptyGroup subrole state to assistive technologies
https://bugs.webkit.org/show_bug.cgi?id=288215
Summary
AX: After dynamic page changes, WebKit can report the wrong AXEmptyGroup subr...
Tyler Wilcock
Reported
2025-02-21 11:09:01 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-21 11:09:11 PST
<
rdar://problem/145306055
>
Tyler Wilcock
Comment 2
2025-02-21 11:21:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/41075
EWS
Comment 3
2025-02-22 15:44:23 PST
Committed
290893@main
(0aca7bdaf628): <
https://commits.webkit.org/290893@main
> Reviewed commits have been landed. Closing PR #41075 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug